--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#feature">Conteúdo</a></li>
-          <li><a href="#quimica">Química</a></li>
+          <li><a href="#cursos">Cursos</a></li>
           <li><a href="#livros">Livros</a></li>
           <!--li><a href="#courses">Cursos</a></li-->
           <li><a href="#faculity-member">Conheça</a></li>
@@ -62,7 +62,7 @@
           <!--li><a href="#contact">Contato</a></li-->
           <li><a href="https://linktr.ee/professormarcelo"><strong>Aulas</strong></a></li>
           
-          <li class="btn-trial"><a href="#ebook">Material gratuito</a></li>
+          <!--li class="btn-trial"><a href="#ebook">Material gratuito</a></li-->
         </ul>
       </div>
     </div>
@@ -282,7 +282,7 @@
   <!--/ feature-->
   
   <!--quimica-->
-  <section id="quimica" class="section-padding">
+  <section id="cursos" class="section-padding">
     <div class="container">
 		<div class="row">
 		<div class="header-section text-center">
@@ -1071,7 +1071,7 @@
   
 
 <!--gratis-->
-<section id="ebook">
+<!--section id="ebook">
   <footer id="ebook" class="footer">
     <div class="container text-center">
       <div>
@@ -1079,7 +1079,7 @@
       </div>
     </div>
   </footer>
-</section>
+</section-->
   <!--/ gratis-->
 <hr>
 
@@ -1131,6 +1131,7 @@
         <li><a href="https://www.instagram.com/marcelojtelles/" class="icoInstagram" ><i class="fab fa-instagram fa-fw"></i></a></li>
        	<li><a href="https://br.pinterest.com/marcelotelles14/" class="icoPinterest"><i class="fab fa-pinterest fa-fw"></i></a></li>
         <li><a href="https://twitter.com/#!/marcelojtelles" class="icoTwitter"><i class="fab fa-twitter fa-fw"></i></a></li>
+		<li><a href="https://chat.whatsapp.com/KGg0LMkcY9SFxGhUMwxqJY" class="icoWhatsApp"><i class="fab fa-whatsapp fa-fw"></i></a></li>
 		<br><br>
         <!-- G+ -->
         <!-- Insta Criar -->
@@ -1140,7 +1141,7 @@
         <!-- Flipboard Criar-->
         <!--https://api.whatsapp.com/send?phone=5551991640596&text=Olá,%20Desejo%20simplificar%20meu%20transporte%20fretado.-->
       </ul>
-      ©2020 Atual.PRO 
+      ©2021 Atual.PRO 
       <div class="credits">
         Créditos a <a href="https://bootstrapmade.com/">BootstrapMade.com</a>
       </div>
