--- a/eletronicos/livros.html
+++ b/eletronicos/livros.html
@@ -150,11 +150,28 @@
  <br>
 	  
 	  <br>
+	  
+	  	  <br>
  
  
        <div class="section-header">
         <div class="header-section text-center">
-          <h2>Lista 2021, estes eu estou lendo</h2>
+          <h2>Lista 2021, já lido</h2>
+          <hr class="bottom-line">  
+		  
+		  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=marcelojtelle-20&language=pt_BR&marketplace=amazon&region=BR&placement=8563149008&asins=8563149008&linkId=b5d4b0d1248fbc65b6eef5937d882a4b&show_border=true&link_opens_in_new_window=true"></iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=marcelojtelle-20&language=pt_BR&marketplace=amazon&region=BR&placement=8542211057&asins=8542211057&linkId=19ca0d33e87bde1460e6224ac52b04e2&show_border=true&link_opens_in_new_window=true"></iframe>
+	
+
+    
+
+	<br>
+ 
+ 
+       <div class="section-header">
+        <div class="header-section text-center">
+          <h2>Lista 2021, quero ler</h2>
           <hr class="bottom-line">  
 	
 	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=855081024X&asins=855081024X&linkId=d2f75ab6c94323500421a7eaac2d4237&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff">
