--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 					  </div>
 					  <div class="modal-body">
 						<p>Vamos explorar fundamentos de autores de auto ajuda.<br>Já estudei e apliquei teorias dos mais importantes autores de nossa época.</p>
-						<p><strong>10 Horas</strong> por R$ 2.078,00</p>
+						<p><strong>10 Horas</strong> por R$ 2.080,00</p>
 						<p>Transferência para conta: <strong>11953694-2</strong><br>
 							Banco: <strong>Nu Pagamentos S.A. (260)</strong><br>
 							Agência: <strong>0001</strong><br>
@@ -201,7 +201,13 @@
 					   16<strong> Ferramentas dos Titãs</strong>, Tim Feriss<br>
 					   17<strong> A Arte da Guerra - Para Quem Mexeu no Queijo do Pai Rico</strong>, Luli Radfahrer <br>
 					   18<strong> Os 7 Hábitos das Pessoas Altamente Eficazes</strong>, Stephen R. Covey<br>
-					   19<strong> Vender e Ser Feliz</strong>, Francisco Ferraz<br>
+					   19<strong> Vender e Ser Feliz</strong>, Francisco Ferraz<br>   
+					   20<strong> 21 Lições para o Século 21</strong>, Yuval Noah Harari<br>
+					   21<strong> Trabalhe 4 horas por semana</strong>, Tim Ferriss<br>
+					   22<strong> De zero a um</strong>, Peter Thiel<br>
+					   23<strong> Sapiens - Uma Breve História da Humanidade</strong>, Yuval Noah Harari<br>
+					   24<strong> A Lei do Triunfo para o Século 21</strong>, Jamill Albuquerque / Márcio Abbud / Walter Kaltenbach<br>
+					   25<strong> A arte de lidar com pessoas</strong>, Jamill Albuquerque<br>
 					   
 					
 					  </div>
