--- a/eletronicos/livros.html
+++ b/eletronicos/livros.html
@@ -104,7 +104,7 @@
 	  
 	  <div class="section-header">
         <div class="header-section text-center">
-          <h2>Top 10</h2>
+          <h2>Top 13</h2>
           <hr class="bottom-line"> 
 
 		  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot0f-20&marketplace=amazon&region=BR&placement=8503011794&asins=8503011794&linkId=3f9662e4ddb1a0d770060fbad80f787e&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=086dcc&bg_color=ffffff">
@@ -139,6 +139,13 @@
 		<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot0f-20&marketplace=amazon&region=BR&placement=B00O7ZN5KQ&asins=B00O7ZN5KQ&linkId=3f827655d3e6767b546278ed1053ba0a&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=086dcc&bg_color=ffffff">
     </iframe>
 	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot0f-20&marketplace=amazon&region=BR&placement=8542211561&asins=8542211561&linkId=25717897a501b791da6ee42c15e2c939&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=086dcc&bg_color=ffffff">
+    </iframe>
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=8535930914&asins=8535930914&linkId=8db8ffb5758ddecd64074f06c5a8c41a&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe>
+
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ler.amazon.com.br/kp/card?asin=B00LPU858I&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_T3BFAG12PQ7F9A3E36KK" ></iframe>
 	
 	
 	<br>	<br>	<br>	<br>	<br>
@@ -183,9 +190,16 @@
  
  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot0f-20&marketplace=amazon&region=BR&placement=B07935JXPC&asins=B07935JXPC&linkId=190f08cb8a65e35f8b30ebb031e86300&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=086dcc&bg_color=ffffff">
     </iframe>
-    
+	
+	
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0"  src="https://ler.amazon.com.br/kp/card?asin=B00W5QZYIU&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_BYENR135M5XNWKBHJ5Y2" ></iframe>
+	
+	
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0"  src="https://ler.amazon.com.br/kp/card?asin=B00AQI6C6M&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_PFRYT0Y5QJAZYX549243" ></iframe>
 
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0"  src="https://ler.amazon.com.br/kp/card?asin=B07MC55SRT&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_ESF7C0WJFFXHZGZRV2WD" ></iframe>
 
+	<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0"  src="https://ler.amazon.com.br/kp/card?asin=B07FXRJ76Y&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_HBRK4798DRJ8XXMY7Q8F" ></iframe>
  <br>
 	  
 	  <br>
