--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 					  </div>
 					  <div class="modal-body">
 						<p>Você escolhe a IDE e o horário!<br>Já ajudei alunos da PUC-RS, CCT College Dublin Irlanda e profissionias de multinacionais.</p>
-						<p><strong>10 Horas</strong> por R$ 1340,00</p>
+						<p><strong>10 Horas</strong> por R$ 1.340,00</p>
 						<p>Transferência para conta: <strong>11953694-2</strong><br>
 							Banco: <strong>Nu Pagamentos S.A. (260)</strong><br>
 							Agência: <strong>0001</strong><br>
@@ -297,9 +297,28 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>           
   <!--/ feature-->
   
+   <section id="cursos" class="section-padding">
+    <div class="container">
+		<div class="row">
+		<div class="header-section text-center">
+         <h2>Meu Livro</h2>
+		  <div class="col-md-12">
+			<div class="header-section text-center">
+			  <h4>Este é meu primeiro livro, onde compartilho com você, minhas experiências.</h4><br>   
+			  <button type="button" onclick="window.open('https://www.editoracrv.com.br/produtos/detalhes/36797-onde-comeca-o-sucesso ');" class="btn btn-danger btn-lg">Comprar na Editra CRV (menor preço)!</button>
+			  <button type="button" onclick="window.open('https://amzn.to/35VIp8l');" class="btn btn-success btn-lg">Comprar na Amazon.</button></li></ul></h2>
+			  <button type="button" onclick="window.open('https://www.estantevirtual.com.br/editora-crv/marcelo-josue-telles-onde-comeca-o-sucesso-3137073642?show_suggestion=0');" class="btn btn-primary btn-lg">Comprar na Estande Virtual.</button>
+			   <br><hr>
+			  <a href="https://www.youtube.com/c/marcelojtelles?sub_confirmation=1"><img src="./img/sucesso.jpg" width="20%"></a>
+			</div>
+		  </div>
+      </div>
+   </div>
+   </section>
+   
   <!--quimica-->
   <section id="cursos" class="section-padding">
     <div class="container">
