--- a/formandos/Formandos2023.html
+++ b/formandos/Formandos2023.html
@@ -4,7 +4,7 @@
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./Formandos2023_files/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="files/bootstrap.min.css" rel="stylesheet">
 
     <title>Formandos2023</title>
 </head>
